--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "test": "ember try:each"
   },
   "dependencies": {
-    "ember-cli-babel": "^6.3.0"
+    "ember-cli-babel": "^6.3.0",
+    "ember-cli-node-assets": "^0.2.2"
   },
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.5",
@@ -39,7 +40,8 @@
     "ember-load-initializers": "^1.0.0",
     "ember-resolver": "^4.0.0",
     "ember-source": "~2.14.1",
-    "loader.js": "^4.2.3"
+    "loader.js": "^4.2.3",
+    "sugar-date": "^2.0.4"
   },
   "engines": {
     "node": "^4.5 || 6.* || >= 7.*"
